<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="menu">Menu</string>
    <string name="likes">Likes</string>
    <string name="reposts">Reposts</string>
    <string name="views">Views</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="description_post_like">Description post like</string>
    <string name="edit_post">Edit post</string>
    <string name="error_empty_input">Content can\'t be empty</string>
    <string name="post_editing_id">Post editing ID = </string>
    <string name="share_post">Share post</string>
    <string name="error_empty_content">Error  - empty content!</string>
    <string name="description_post_save">Save</string>
    <string name="string_add_post">Add post</string>
    <string name="input_new_post">Input new post!</string>
    <string name="video_content">Video content</string>
    <string name="play_video_button">Play video button</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notification from remote server</string>
    <string name="notification_userliked">User %1$s liked %2$s\'s post</string>
    <string name="notification_userNewPost">User %1$s add new post ID = %2$s\</string>
    <string name="not_nown_action_notification">Not nown action notification from server!</string>
</resources>