<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.MainActivity">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/posts_avatar_width"
            android:layout_height="@dimen/posts_avatar_height"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:contentDescription="@string/description_post_author_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_netology"
            tools:srcCompat="@sample/posts.json/data/authorAvatar" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/published"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/avatar"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintEnd_toEndOf="@id/author"
            app:layout_constraintStart_toStartOf="@id/author"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="@sample/posts.json/data/published" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            style="@style/Widget.AppTheme.LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/menu"
            app:icon="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header_barrier2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar, published, menu" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:autoLink="web"
            android:linksClickable="true"
            app:layout_constraintTop_toBottomOf="@id/header_barrier2"
            tools:text="@sample/posts.json/data/post" />

        <RelativeLayout
            android:id="@+id/video_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/post_bottom_barrier"
            app:layout_constraintTop_toBottomOf="@id/content">

            <ImageView
                android:id="@+id/image_video"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="@dimen/common_spacing"
                android:contentDescription="@string/video_content"
                android:scaleType="fitCenter"
                android:src="@drawable/video_netology"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/video_netology" />

            <ImageButton
                android:id="@+id/play_video_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:contentDescription="@string/play_video_button"
                android:maxHeight="@dimen/icon_button_min_size"
                android:src="@drawable/ic_baseline_play_arrow_48"
                tools:ignore="RedundantDescriptionCheck" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/post_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="video_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/likes_ico"
            style="@style/Widget.AppTheme.LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:checkable="true"
            android:contentDescription="@string/likes"
            app:icon="@drawable/ic_like_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_bottom_barrier"
            tools:checked="@sample/posts.json/data/likes"
            tools:text="@sample/posts.json/data/likes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reposts_ico"
            style="@style/Widget.AppTheme.LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:contentDescription="@string/reposts"
            app:icon="@drawable/ic_baseline_share_24"
            app:layout_constraintLeft_toRightOf="@id/likes_ico"
            app:layout_constraintTop_toBottomOf="@id/post_bottom_barrier"
            app:layout_constraintTop_toTopOf="@id/likes_ico"
            tools:text="@sample/posts.json/data/reposts" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/views_ico"
            style="@style/Widget.AppTheme.LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/views"
            app:icon="@drawable/ic_baseline_visibility_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/likes_ico"
            tools:text="@sample/posts.json/data/reposts" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>